# reflect

./: .clang-format  .clang-tidy  .gitignore  ATTRIBUTION.txt  CHANGELOG.md  CMakeLists (2).txt  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  DownloadLibraries.py  LICENSES.txt  README.md  TODO.md  main.cpp  main.xml  msgboxgen.exp  msgboxgen.lib  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: nightly.yml  tests.yml
cli/: Definitions.h  Main.cpp  Main.h  TypeDefinitions.h  Utilities.h
common/: Console.h  Definitions.h  TypeDefinitions.h
core/: CToastAPI.cpp  LuaAPI.h  Main.cpp  Utilities.cpp  Utilities.h
core/ui/: Button.cpp  Component.cpp  Component.h  Components.h  Label.cpp  MenuBar.cpp  MenuBar.h  MenuItem.cpp  MenuItem.h  Notification.cpp  Notification.h  Vector2.cpp  Window.cpp  Window.h
crash/: CrashHandler.cpp  CrashHandler.h  TypeDefinitions.h
lib/: tinyxml2.cpp
lua/: CToastLua.cpp  CToastLua.h  LuaInstance.h
src/: CToastAPI.cpp  CToastAPI.h  Console.h  CrashHandler.h  Definitions.h  LuaAPI.cpp  Main.cpp  Main.h  TypeDefinitions.h  Utilities.cpp  Utilities.h
src/api/cstyle/: CToastC.cpp  CToastC.h  CToastCExtern.h  ReflectC.cpp  ReflectC.h  ReflectCExtern.h
src/api/java/: CToastJava.c  CToastJava.h  CToastJavaUtil.h  ReflectJava.c  ReflectJava.h  ReflectJavaUtil.h
src/api/lua/: CToastLua.cpp  CToastLua.h  Console.h  LuaInstance.h  ReflectLua.cpp  ReflectLua.h
src/cli/: Main.cpp  Main.h  Utilities.h
src/common/: Console.h  ConsoleHelper.cpp  ConsoleHelper.h  Definitions.h  Object.h  TypeDefinitions.h
src/core/: CToastAPI.cpp  CToastAPI.h  Console.h  CrashHandler.h  Extensions.cpp  Extensions.h  LuaAPI.cpp  LuaAPI.h  Main.cpp  Main.h  Object.cpp  ReflectAPI.cpp  ReflectAPI.h  Utilities.cpp  Utilities.h
src/core/logging/: LogBuffer.cpp  LogBuffer.h  LogInstance.cpp  LogInstance.h  LogUtil.cpp  LogUtil.h
src/core/memory/: HeapPool.cpp  HeapPool.h
src/core/ui/: Button.cpp  Button.h  Canvas.cpp  Canvas.h  Colors.h  Component.cpp  Component.h  Components.cpp  Components.h  Container.cpp  Container.h  Image.cpp  Image.h  Label.cpp  Label.h  MenuBar.cpp  MenuBar.h  MenuItem.cpp  MenuItem.h  Notification.cpp  Notification.h  OpenGLContext.cpp  OpenGLContext.h  ProgressBar.cpp  ProgressBar.h  TextComponent.cpp  TextComponent.h  TextField.cpp  TextField.h  Vector2.cpp  Vector2.h  Window.cpp  Window.h
src/core/xml/: ProcessorRegistry.cpp  ProcessorRegistry.h
src/crash/: CrashHandler.cpp  CrashHandler.h
src/net/: HttpRequest.cpp  HttpRequest.h
src/ui/: Button.cpp  Button.h  Colors.h  Component.cpp  Component.h  Components.cpp  Components.h  Label.cpp  Label.h  TextComponent.cpp  TextComponent.h  Vector2.cpp  Vector2.h  Window.cpp  Window.h
src/windows/: CinnamonToast.CStyleAPI.rc  CinnamonToast.Core.rc  CinnamonToast.CrashHandler.rc  CinnamonToast.JavaAPI.rc  CinnamonToast.LuaAPI.rc  ctoasti.manifest  ctoasti.rc  reflecti.manifest  reflecti.rc
test/: ButtonTest.cpp  HttpTest.cpp  LabelTest.cpp  LaunchTest.cpp  VectorTest.cpp  WindowTest.cpp
